# bevy_jam_5

./: Cargo.toml  README.md
.github/workflows/: release.yaml
crates/bevy_ui_helpers/: Cargo.toml
crates/bevy_ui_helpers/src/: class_builder.rs  lib.rs  node_builders.rs  styles.rs
src/: attractor.rs  camera.rs  collision.rs  constants.rs  debug.rs  enemy.rs  enemy_spawner.rs  foilage.rs  game_resources.rs  game_state.rs  health.rs  hud_ui.rs  level_up.rs  lifetime.rs  main.rs  math.rs  menu.rs  orb.rs  planet.rs  player.rs  point.rs  projectile.rs  ui_widgets.rs  velocity.rs  weapon.rs
src/game_resources/: enemy_stats.rs  enemy_stats_timer.rs  game_timer.rs  player_score.rs  player_stats.rs  plugin.rs
src/menu/: game_over.rs  main_menu.rs  pause_menu.rs  plugin.rs  power_up.rs  style.rs  types.rs  widgets.rs
src/ui_widgets/: button.rs  plugin.rs  progress_bar.rs
