[package]
name = "bevy_jam_5"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy.workspace = true
rand.workspace = true
bevy_ui_helpers = { path = "crates/bevy_ui_helpers" }

[workspace]
members = [
  "crates/*",
]

# Workspace dependencies
[workspace.dependencies]
bevy = "0.14"
rand = "0.8.5"
